Added CMake build files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
 /build
+
+# Files generated under CMake
+glsdk/freeglut/Makefile
+glsdk/freeglut/config.h
+glsdk/freeglut/config.log
+glsdk/freeglut/config.status
+glsdk/freeglut/doc/Makefile
+glsdk/freeglut/include/GL/Makefile
+glsdk/freeglut/include/Makefile
+glsdk/freeglut/libtool
+glsdk/freeglut/progs/Makefile
+glsdk/freeglut/progs/demos/CallbackMaker/.deps/
+glsdk/freeglut/progs/demos/CallbackMaker/Makefile
+glsdk/freeglut/progs/demos/Fractals/.deps/
+glsdk/freeglut/progs/demos/Fractals/Makefile
+glsdk/freeglut/progs/demos/Fractals_random/.deps/
+glsdk/freeglut/progs/demos/Fractals_random/Makefile
+glsdk/freeglut/progs/demos/Lorenz/.deps/
+glsdk/freeglut/progs/demos/Lorenz/Makefile
+glsdk/freeglut/progs/demos/Makefile
+glsdk/freeglut/progs/demos/One/.deps/
+glsdk/freeglut/progs/demos/One/Makefile
+glsdk/freeglut/progs/demos/shapes/.deps/
+glsdk/freeglut/progs/demos/shapes/Makefile
+glsdk/freeglut/progs/demos/smooth_opengl3/.deps/
+glsdk/freeglut/progs/demos/smooth_opengl3/Makefile
+glsdk/freeglut/progs/demos/spaceball/.deps/
+glsdk/freeglut/progs/demos/spaceball/Makefile
+glsdk/freeglut/src/.deps/
+glsdk/freeglut/src/Makefile
+glsdk/freeglut/stamp-h1
